Core 및 Demo 소스 정리

--- a/rng-demo/build.gradle
+++ b/rng-demo/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
+	implementation project(path: ':rng-core', configuration: 'default')
 
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	implementation 'javax.servlet:jstl'
