소스 정리 불필요한 설정 파일 등 삭제 nexacro용 샘플 소스 구조 추가

--- a/rng-demo/build.gradle
+++ b/rng-demo/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation project(path: ':rng-core', configuration: 'default')
 
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
@@ -31,22 +32,5 @@ dependencies {
 	implementation 'dom4j:dom4j:1.6.1'
 	implementation 'org.apache.poi:poi:5.0.0'
 	implementation 'com.google.guava:guava:31.1-jre'
-
-//	implementation ("com.nexacro.uiadapter17.spring:uiadapter17-spring-core:${nexacroUiadapterVersion}") {
-//		exclude group: 'org.springframework', module: 'spring-webmvc'
-//		exclude group: 'org.slf4j', module: 'slf4j-api'
-//	}
-//
-//	implementation("com.nexacro.uiadapter17.spring:uiadapter17-spring-dataaccess:${nexacroUiadapterVersion}") {
-//		exclude group: 'org.springframework', module: 'spring-webmvc'
-//		exclude group: 'org.aspectj', module: 'aspectjweaver'
-//		exclude group: 'org.apache.ibatis', module: 'ibatis-sqlmap'
-//		exclude group: 'org.mybatis', module: 'mybatis'
-//		exclude group: 'org.mybatis', module: 'mybatis-spring'
-//		exclude group: 'org.springframework', module: 'spring-orm'
-//	}
-//
-//	implementation("com.nexacro.uiadapter17.spring:uiadapter17-spring-excel:${nexacroUiadapterVersion}") {
-//		exclude group: 'org.springframework', module: 'spring-webmvc'
-//	}
+	implementation 'com.h2database:h2'
 }
