--- a/rng-demo/build.gradle
+++ b/rng-demo/build.gradle
@@ -19,10 +19,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation project(path: ':rng-core', configuration: 'default')
 
-	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+//	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	implementation 'javax.servlet:jstl'
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
-	implementation 'org.hsqldb:hsqldb'
+//	implementation 'org.hsqldb:hsqldb'
 	implementation 'com.google.code.gson:gson'
 	implementation 'commons-codec:commons-codec'
 	implementation 'org.apache.commons:commons-lang3'
