--- a/rng-demo/src/main/resources/application.yml
+++ b/rng-demo/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
       driver-class-name: org.h2.Driver
-      jdbc-url: jdbc:h2:tcp://localhost/D:/rng/h2/store/rng_demo
+      jdbc-url: jdbc:h2:~/test
       username: sa
       password:
       minimumIdle: 5
@@ -14,7 +14,10 @@ spring:
       leak-detection-threshold: 48000
   main:
     allow-bean-definition-overriding: true
-
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 server:
   context-path: lotterental
@@ -25,12 +28,9 @@ server:
       enabled: true
       force: true
 
-
-
 #logging config
 logging:
   config: classpath:logback-spring.xml
-
 
 log4jdbc:
   spylogdelegator:
