--- a/rng-core/build.gradle
+++ b/rng-core/build.gradle
@@ -27,6 +27,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    implementation 'org.springframework.session:spring-session-data-redis'
+    implementation 'org.springframework.data:spring-data-redis'
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
     implementation 'org.freemarker:freemarker:2.3.31'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'com.google.code.gson:gson:2.9.0'
