--- a/rng-demo/src/main/resources/application.yml
+++ b/rng-demo/src/main/resources/application.yml
@@ -14,7 +14,7 @@
 server:
   port: 8080
   servlet:
-    context-path: /rng # 컨텍스 Path
+    context-path: / # 컨텍스 Path
     register-default-servlet: true
     encoding:
       charset: UTF-8
@@ -90,7 +90,63 @@ log4jdbc:
 # Business config (start with: rng)
 #
 ################################################################################
-
+# framework config
+rng:
+  db:
+    mybatis:
+      config:
+        location: classpath:mybatis-config.xml
+      mapper:
+        location: classpath:mapper/**/*.xml
+      aliases:
+        package: com.lotterental.rng.demo
+  nexacro:
+    default:
+      error:
+        msg: fail.common.msg
+      encoding: utf-8
+    excel:
+      url: /XExportImport.do
+      path:
+        export: file:///C:/Temp/export/
+        import: file:///C:/Temp/import/
+    monitor:
+      enabled: true
+      cycle:
+        time: 30
+    file:
+      storage:
+        time: 10
+      system:
+        resource: C:\\Temp
+    size:
+      upload:
+        max: 100000000
+      in-memory:
+        max: 100000000
+  cors:
+    allow:
+      credentials: true
+    max-age: 3600
+    http:
+      method: OPTIONS
+  webapp:
+    view:
+      prefix: /WEB-INF/jsp/
+      suffix: .jsp
+      name: forward:/index.html
+    resource:
+      location: /nx/
+    message:
+      location: classpath:/messages/message
+    default:
+      encoding: UTF-8
+      message: true
+    cache:
+      seconds: 60
+    interceptor:
+      locale:
+        param: lang
 ################################################################################
 # 공통변수 영역 종료 ##############################################################
 ################################################################################
@@ -149,46 +205,6 @@ spring:
       timeout: 50
       min-pooling: 5
       max-pooling: 20
-
-# framework config
-config:
-  db-config:
-    config-location: classpath:mybatis-config.xml
-    mapper-location: classpath:mapper/**/*.xml
-    type-aliases-package: com.lotterental.rng.demo
-    sql-session-bean-name: sqlSession
-  nexacro-config:
-    default-error-msg: fail.common.msg
-    db-vendor: HSQL Database Engine
-    excel-url: /XExportImport.do
-    export-path: file:///C:/Temp/export/
-    import-path: file:///C:/Temp/import/
-    monitor-enabled: true
-    monitor-cycle-time: 30
-    file-storage-time: 10
-    default-encoding: utf-8
-    max-upload-size: 100000000
-    max-in-memory-size: 100000000
-    file-system-resource: C:\\Temp
-    multipart-resolver-bean-name: multipartResolver
-  simple-cors-filter:
-    allow-credentials: true
-    max-age: 3600
-    http-method: OPTIONS
-  tr-config:
-    expression: execution(* com.lotterental..service.impl.*Impl.*(..))
-  web-app-config:
-    view:
-      prefix: /WEB-INF/jsp/
-      suffix: .jsp
-      name: forward:/index.html
-    resource-location: /nx/
-    message-base-loc: classpath:/messages/message
-    default-encoding: UTF-8
-    cache-seconds: 60
-    use_code_as-default-message: true
-    locale-change-interceptor:
-      param-name: lang
 ---
 ################################################################################
 #
@@ -242,48 +258,6 @@ spring:
       timeout: 50
       min-pooling: 5
       max-pooling: 20
-
-# framework config
-config:
-  db-config:
-    config-location: classpath:mybatis-config.xml
-    mapper-location: classpath:mapper/**/*.xml
-    type-aliases-package: com.lotterental.rng.demo
-    sql-session-bean-name: sqlSession
-  nexacro-config:
-    default-error-msg: fail.common.msg
-    db-vendor: HSQL Database Engine
-    excel-url: /XExportImport.do
-    export-path: file:///C:/Temp/export/
-    import-path: file:///C:/Temp/import/
-    monitor-enabled: true
-    monitor-cycle-time: 30
-    file-storage-time: 10
-    default-encoding: utf-8
-    max-upload-size: 100000000
-    max-in-memory-size: 100000000
-    file-system-resource: C:\\Temp
-    multipart-resolver-bean-name: multipartResolver
-  simple-cors-filter:
-    allow-credentials: true
-    max-age: 3600
-    http-method: OPTIONS
-  tr-config:
-    expression: execution(* com.lotterental..service.impl.*Impl.*(..))
-  web-app-config:
-    view:
-      prefix: /WEB-INF/jsp/
-      suffix: .jsp
-      name: forward:/index.html
-    resource-location: /nx/
-    message-base-loc: classpath:/messages/message
-    default-encoding: UTF-8
-    cache-seconds: 60
-    use_code_as-default-message: true
-    locale-change-interceptor:
-      param-name: lang
-
-
 ---
 ################################################################################
 #
@@ -337,48 +311,6 @@ spring:
       timeout: 50
       min-pooling: 5
       max-pooling: 20
-
-# framework config
-config:
-  db-config:
-    config-location: classpath:mybatis-config.xml
-    mapper-location: classpath:mapper/**/*.xml
-    type-aliases-package: com.lotterental.rng.demo
-    sql-session-bean-name: sqlSession
-  nexacro-config:
-    default-error-msg: fail.common.msg
-    db-vendor: HSQL Database Engine
-    excel-url: /XExportImport.do
-    export-path: file:///C:/Temp/export/
-    import-path: file:///C:/Temp/import/
-    monitor-enabled: true
-    monitor-cycle-time: 30
-    file-storage-time: 10
-    default-encoding: utf-8
-    max-upload-size: 100000000
-    max-in-memory-size: 100000000
-    file-system-resource: C:\\Temp
-    multipart-resolver-bean-name: multipartResolver
-  simple-cors-filter:
-    allow-credentials: true
-    max-age: 3600
-    http-method: OPTIONS
-  tr-config:
-    expression: execution(* com.lotterental..service.impl.*Impl.*(..))
-  web-app-config:
-    view:
-      prefix: /WEB-INF/jsp/
-      suffix: .jsp
-      name: forward:/index.html
-    resource-location: /nx/
-    message-base-loc: classpath:/messages/message
-    default-encoding: UTF-8
-    cache-seconds: 60
-    use_code_as-default-message: true
-    locale-change-interceptor:
-      param-name: lang
-
-
 ################################################################################
 # CI/CD를 위한 개별변수영역 종료 ###################################################
 ################################################################################
