--- a/rng-demo/build.gradle
+++ b/rng-demo/build.gradle
@@ -17,11 +17,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 	implementation project(path: ':rng-core', configuration: 'default')
 
 //	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	implementation 'javax.servlet:jstl'
-	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+	compileOnly    'org.apache.tomcat.embed:tomcat-embed-jasper'
 //	implementation 'org.hsqldb:hsqldb'
 	implementation 'com.google.code.gson:gson'
 	implementation 'commons-codec:commons-codec'
