--- a/rng-demo/src/main/resources/application.yml
+++ b/rng-demo/src/main/resources/application.yml
@@ -69,6 +69,8 @@ spring:
   thymeleaf:
     cache: true
 
+    #org.hibernate.dialect.Oracle10gDialect
+
 
 ################################################################################
 #
@@ -167,24 +169,24 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
-      driver-class-name: org.h2.Driver
-      jdbc-url: jdbc:h2:~/test
-      username: sa
-      password:
+      driver-class-name: com.tmax.tibero.jdbc.TbDriver
+      jdbc-url: jdbc:tibero:thin:@127.0.0.1:8629:tibero
+      username: sample_tdb
+      password: jenta210
       minimumIdle: 5
       maximumPoolSize: 50
       idleTimeout: 30000
       maxLifetime: 1800000
       connectionTimeout: 30000
       leak-detection-threshold: 48000
-    schema: classpath:schema.sql
-    initialization-mode: always
+#    schema: classpath:schema.sql
+#    initialization-mode: always
   main:
     allow-bean-definition-overriding: true
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2-console
 
 
   redis:
@@ -220,24 +222,24 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
-      driver-class-name: org.h2.Driver
-      jdbc-url: jdbc:h2:~/test
-      username: sa
-      password:
+      driver-class-name: com.tmax.tibero.jdbc.TbDriver
+      jdbc-url: jdbc:tibero:thin:@127.0.0.1:8629:tibero
+      username: sample_tdb
+      password: jenta210
       minimumIdle: 5
       maximumPoolSize: 50
       idleTimeout: 30000
       maxLifetime: 1800000
       connectionTimeout: 30000
       leak-detection-threshold: 48000
-    schema: classpath:schema.sql
-    initialization-mode: always
+#    schema: classpath:schema.sql
+#    initialization-mode: always
   main:
     allow-bean-definition-overriding: true
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2-console
 
 
   redis:
@@ -273,24 +275,24 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
-      driver-class-name: org.h2.Driver
-      jdbc-url: jdbc:h2:~/test
-      username: sa
-      password:
+      driver-class-name: com.tmax.tibero.jdbc.TbDriver
+      jdbc-url: jdbc:tibero:thin:@127.0.0.1:8629:tibero
+      username: sample_tdb
+      password: jenta210
       minimumIdle: 5
       maximumPoolSize: 50
       idleTimeout: 30000
       maxLifetime: 1800000
       connectionTimeout: 30000
       leak-detection-threshold: 48000
-    schema: classpath:schema.sql
-    initialization-mode: always
+#    schema: classpath:schema.sql
+#    initialization-mode: always
   main:
     allow-bean-definition-overriding: true
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2-console
 
 
   redis:
