작업중 임시 커밋

--- a/rng-demo/src/main/resources/application.yml
+++ b/rng-demo/src/main/resources/application.yml
@@ -122,7 +122,7 @@ rng:
       storage:
         time: 10
       system:
-        resource: D:\\rng\\temp\\file
+        resource: D:\\rng\\temp\\file\\
     size:
       upload:
         max: 100000000
