demo package로 이동으로 yaml 변경

--- a/rng-demo/src/main/resources/application.yml
+++ b/rng-demo/src/main/resources/application.yml
@@ -103,7 +103,7 @@ rng:
       mapper:
         location: classpath:mapper/**/*.xml
       aliases:
-        package: com.lotterental.rng.example
+        package: com.lotterental.rng.demo.example
   nexacro:
     default:
       error:
