--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'rng-proj'
-include 'rng-be'
 include 'rng-core'
+include 'rng-biz'
+include 'rng-be'
 include 'rng-demo'
+include 'rng-erp'
