--- a/rng-demo/build.gradle
+++ b/rng-demo/build.gradle
@@ -7,6 +7,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 	implementation project(path: ':rng-core', configuration: 'default')
+	implementation project(path: ':rng-biz', configuration: 'default')
 
 //	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	implementation 'javax.servlet:jstl'
@@ -21,7 +22,7 @@ dependencies {
 	implementation 'dom4j:dom4j:1.6.1'
 	implementation 'org.apache.poi:poi:5.0.0'
 	implementation 'com.google.guava:guava:31.1-jre'
-	implementation 'com.h2database:h2'
+//	implementation 'com.h2database:h2'
 	implementation files('libs/tibero6-jdbc-14.jar')
 
 }
