--- a/rng-core/build.gradle
+++ b/rng-core/build.gradle
@@ -1,17 +1,3 @@
-//buildscript {
-//    ext {
-//        nexacroUiadapterVersion = '1.0.0-SNAPSHOT'
-//    }
-//}
-//
-//repositories {
-//    mavenCentral()
-//    maven {
-//        url "http://mangosteen.tobesoft.co.kr/nexus/repository/maven-public"
-//        allowInsecureProtocol = true
-//    }
-//}
-
 bootJar {
     enabled = false
     archiveFileName = 'rng-core.jar'
@@ -24,6 +10,7 @@ jar {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
@@ -40,22 +27,4 @@ dependencies {
     implementation 'biz.paluch.redis:lettuce:4.5.0.Final'
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'commons-fileupload:commons-fileupload:1.4'
-
-//    implementation ("com.nexacro.uiadapter17.spring:uiadapter17-spring-core:${nexacroUiadapterVersion}") {
-//        exclude group: 'org.springframework', module: 'spring-webmvc'
-//        exclude group: 'org.slf4j', module: 'slf4j-api'
-//    }
-//
-//    implementation("com.nexacro.uiadapter17.spring:uiadapter17-spring-dataaccess:${nexacroUiadapterVersion}") {
-//        exclude group: 'org.springframework', module: 'spring-webmvc'
-//        exclude group: 'org.aspectj', module: 'aspectjweaver'
-//        exclude group: 'org.apache.ibatis', module: 'ibatis-sqlmap'
-//        exclude group: 'org.mybatis', module: 'mybatis'
-//        exclude group: 'org.mybatis', module: 'mybatis-spring'
-//        exclude group: 'org.springframework', module: 'spring-orm'
-//    }
-//
-//    implementation("com.nexacro.uiadapter17.spring:uiadapter17-spring-excel:${nexacroUiadapterVersion}") {
-//        exclude group: 'org.springframework', module: 'spring-webmvc'
-//    }
 }
