--- a/rng-demo/build.gradle
+++ b/rng-demo/build.gradle
@@ -1,6 +1,5 @@
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -9,10 +8,11 @@ dependencies {
 	implementation project(path: ':rng-core', configuration: 'default')
 	implementation project(path: ':rng-biz', configuration: 'default')
 
-//	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+	// JSP 관련
 	implementation 'javax.servlet:jstl'
 	compileOnly    'org.apache.tomcat.embed:tomcat-embed-jasper'
-//	implementation 'org.hsqldb:hsqldb'
+	// JSP 관련
+
 	implementation 'com.google.code.gson:gson'
 	implementation 'commons-codec:commons-codec'
 	implementation 'org.apache.commons:commons-lang3'
@@ -22,7 +22,5 @@ dependencies {
 	implementation 'dom4j:dom4j:1.6.1'
 	implementation 'org.apache.poi:poi:5.0.0'
 	implementation 'com.google.guava:guava:31.1-jre'
-//	implementation 'com.h2database:h2'
 	implementation files('libs/tibero6-jdbc-14.jar')
-
 }
