--- a/rng-demo/build.gradle
+++ b/rng-demo/build.gradle
@@ -23,4 +23,6 @@ dependencies {
 	implementation 'org.apache.poi:poi:5.0.0'
 	implementation 'com.google.guava:guava:31.1-jre'
 	implementation files('libs/tibero6-jdbc-14.jar')
+	implementation 'net.sf.ehcache:ehcache'
+
 }
